--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "vscode-test",
-
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --configuration production --output-hashing none && tsc -p tsconfig.extension.json",
@@ -38,15 +37,6 @@
     "package": "vsce package --yarn"
   },
   "devDependencies": {
-    "@types/node": "18.x",
-    "@types/vscode": "^1.89.0",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
-    "@vscode/test-electron": "^2.3.9",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5",
-
-
     "@angular-devkit/build-angular": "^17.0.8",
     "@angular-eslint/builder": "17.1.1",
     "@angular-eslint/eslint-plugin": "17.1.1",
@@ -56,8 +46,15 @@
     "@angular/cli": "^17.0.8",
     "@angular/compiler-cli": "^17.0.8",
     "@angular/language-service": "^17.0.8",
+    "@types/node": "18.x",
+    "@types/vscode": "^1.89.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "@vscode/test-electron": "^2.3.9",
+    "eslint": "^8.57.0",
     "prettier": "^3.1.1",
     "ts-node": "~10.9.2",
+    "typescript": "^5.4.5",
     "vsce": "^2.15.0"
   },
   "private": false,
@@ -72,7 +69,9 @@
     "@angular/platform-browser": "^17.0.8",
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
+    "@types/sqlite3": "^3.1.11",
     "rxjs": "~7.8.1",
+    "sqlite3": "^5.1.7",
     "vscode-test": "^1.6.1",
     "zone.js": "~0.14.2"
   }
