--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular/cli": "^17.0.8",
     "@angular/compiler-cli": "^17.0.8",
     "@angular/language-service": "^17.0.8",
+    "@types/axios": "^0.14.0",
     "@types/node": "18.x",
     "@types/vscode": "^1.89.0",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
@@ -70,6 +71,7 @@
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
     "@types/sqlite3": "^3.1.11",
+    "axios": "^1.7.2",
     "rxjs": "~7.8.1",
     "sqlite3": "^5.1.7",
     "vscode-test": "^1.6.1",
