--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./dist/ext-src/extension.js",
   "contributes": {
     "commands": [
@@ -20,6 +22,13 @@
       {
         "command": "dahu.helloWorld",
         "title": "Hello World"
+      }
+    ],
+    "themes": [
+      {
+        "label": "Dahu Theme",
+        "uiTheme": "vs-dark",
+        "path": "./themes/extensionTheme.json"
       }
     ]
   },
