--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@angular/compiler-cli": "^17.0.8",
     "@angular/language-service": "^17.0.8",
     "@types/axios": "^0.14.0",
-    "@types/node": "18.x",
+    "@types/node": "^18.19.34",
     "@types/vscode": "^1.89.0",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
@@ -81,6 +81,7 @@
     "@angular/router": "^17.0.8",
     "@types/sqlite3": "^3.1.11",
     "axios": "^1.7.2",
+    "colorthief": "^2.4.0",
     "rxjs": "~7.8.1",
     "sqlite3": "^5.1.7",
     "vscode-test": "^1.6.1",
