--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "displayName": "dahu",
   "description": "advanced vscode colorscheme manager",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mariusuktveris/dahu"
+  },
   "engines": {
     "vscode": "^1.89.0"
   },
